namcap (3.1)
	- add checks for files in temp. folders in fhs rule (FS#23539)
	- fix: parsepkgbuild executing arbitrary commands from PKGBUILD (FS#23902)
	- fix: bug in script interpreter detection

namcap (3.0.6)
	- depends check now prints reasons why a dependency is needed
	- fix: inverted treatment of provides introduced by 3.0.5
	- test: basic unit test for sodepends rule
	- factored out tag formatting code

namcap (3.0.5)
	- fix: depends rule unreadable and broken (FS#23489)
	- added a warning when a rule needs a dependency declared optional

namcap (3.0.4)
	- run parsepkgbuild with a clean environment
	- added checkdepends to the list of legit PKGBUILD variables

namcap (3.0.3)
	- fix: extravars rule having unstable behaviour
	- fix: symlink rule not handling particular symlinks

namcap (3.0.2)
	- extravars rule: reduce the amount of false positives
	- fix crashes when running in non-English locales

namcap (3.0.1)
	- fix the ChecksumsRule behaviour with no source array (FS#23258)
	- correct old PacmanPackage interface usage (FS#23259, FS#23260)

namcap (3.0)
	- switch to Python 3
	- rework dependency analysis
	- add split package parsing capabilities
	- new rule checking whether info files are installed (FS#23003)
	- new rule checking that glib schemas and gio modules are
	  registered (FS#22881)
	- new rule checking update-desktop-database is run (FS#22929)
	- the permissions rule warns against setuid/setgid files (FS#18852)
	- new rules for basic coherence of split packages (FS#15027)
	- API: rework the implementation of rules
	- API: give PacmanPackage a mapping-like interface
	- fix: test suite ran with i686 architecture set
	- fix: kdeprograms rule not seeing indirect dependencies
	- fix: FS#15591 consistent hicolor-icon-theme messages
	- fix: FS#17166 consistent shared-mime-info messages
	- test: add unit test for the rpath rule

namcap (2.8.2)
	- fix: extravars rule parses PKGBUILDs incorrectly

namcap (2.8.1)
	- don't be restrictive in filenames rule